test/data/semantic-errors/undeclared-variables.iki
var y: int;
write x;
